--- a/DatabaseConnectivityDemo/ReadMe
+++ b/DatabaseConnectivityDemo/ReadMe
@@ -1,13 +1,19 @@
-#1 DatabaseConnectivity.java|ConnectionClass.java|JdbcDemo.java
+Set1:
+- DatabaseConnectivity.java
+- ConnectionClass.java
+- JdbcDemo.java
 
+Description: 
 The code demonstrates interface-based programming.
 By creating an interface (DatabaseConnectivity) for database connectivity and offering a concrete implementation (ConnectionClass) that complies with this interface.
 Different DatabaseConnectivity interface implementations can be interchanged and made flexible with this approach.
 
 
+Set2:
+- JDBCConnection.java
+- StaffDAO.java
 
-#2 JDBCConnection.java|StaffDAO.java
-
+Description:
 Created a simple JDBC example where I have a ConnectionClass that handles the database connection,
 and a StaffDAO class that extends ConnectionClass to perform a query to retrieve staff information.
 Overall, the code demonstrates a simple JDBC connection and query execution to fetch and display staff information from a database.
